crates/core/tests/snapshots/sync__entry_shapes_per_client.snap
---
source: crates/core/tests/sync.rs
expression: "serde_json::to_string_pretty(&vs_stdio).unwrap()"
---
{
  "type": "stdio",
  "command": "npx",
  "args": [
    "-y",
    "@modelcontextprotocol/server-github"
  ],
  "env": {
    "TOKEN": "t"
  }
}
