crates/core/tests/snapshots/sync__plan_is_idempotent_after_apply.snap
---
source: crates/core/tests/sync.rs
expression: "serde_json::to_string_pretty(&root).unwrap()"
---
{
  "otherSetting": true,
  "mcpServers": {
    "users-own": {
      "command": "deno"
    },
    "github": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-github"
      ],
      "env": {
        "TOKEN": "t"
      }
    },
    "linear": {
      "type": "http",
      "url": "https://mcp.linear.app/mcp"
    }
  }
}
