crates/core/tests/snapshots/sync__the_fields_each_client_owns_are_what_they_were.snap
---
source: crates/core/tests/sync.rs
expression: owned
---
[
    (
        "claude-desktop",
        [],
    ),
    (
        "claude-code",
        [],
    ),
    (
        "cursor",
        [],
    ),
    (
        "vscode",
        [],
    ),
    (
        "gemini",
        [],
    ),
    (
        "codex",
        [],
    ),
    (
        "opencode",
        [],
    ),
    (
        "windsurf",
        [],
    ),
    (
        "zed",
        [],
    ),
    (
        "cline",
        [
            "disabled",
            "autoApprove",
        ],
    ),
    (
        "cline-cli",
        [
            "disabled",
            "autoApprove",
        ],
    ),
    (
        "amp",
        [
            "disabled",
        ],
    ),
    (
        "zoo",
        [
            "disabled",
            "autoApprove",
            "alwaysAllow",
            "disabledTools",
        ],
    ),
]
